[gd_scene load_steps=2 format=3 uid="uid://dlui0i4fjrmlr"]

[ext_resource type="Script" uid="uid://cjsdbc1boe27u" path="res://Scripts/volley_direction_modal.gd" id="1_nylk1"]

[node name="VolleyDirectionModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nylk1")

[node name="BackgroundPanel" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="ButtonsContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="Spacer1" type="Control" parent="ButtonsContainer"]
layout_mode = 2

[node name="UpButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "↑"

[node name="Spacer2" type="Control" parent="ButtonsContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "←"

[node name="Spacer3" type="Control" parent="ButtonsContainer"]
layout_mode = 2

[node name="RightButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "→"

[node name="Spacer4" type="Control" parent="ButtonsContainer"]
layout_mode = 2

[node name="DownButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "↓"

[node name="Spacer5" type="Control" parent="ButtonsContainer"]
layout_mode = 2
